--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,22 @@
   }
 
   /* inter-regular - latin */
-@font-face {
+  @font-face {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     src: local(''),
          url('../fonts/inter-v7-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/inter-v7-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* source-sans-pro-regular - latin */
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+         url('../fonts/source-sans-pro-v18-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/source-sans-pro-v18-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   html{
       box-sizing: border-box;
@@ -45,9 +54,9 @@
       box-sizing: inherit;
   }
   body{
-      font-family: 'Inter';
+      font-family: 'inter';
       font-style: normal;
-      font-weight: 400;
+      font-weight: 900;
       font-size: 20px;
       line-height: 1.2;
       color: white;
@@ -61,7 +70,17 @@
   }
   /* Header styles */
   .header{
-      background: black;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      font-family: 'merriweather';
+      font-style: normal;
+      font-weight: 900;
+      font-size: 22px;
+      line-height: 1.2;
+      color: white;
+      text-shadow: 3px 4px 4px black;
   }
   .header__logo{
       align-self: flex-start;
@@ -71,6 +90,7 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
+      padding-top: 15px;
   }
   .header__list{
       display: flex;
@@ -81,13 +101,73 @@
       align-items: center;
   }
   .header__item{
-      margin-left: 20px;
-      margin-right: 20px;
+      margin-left: 5px;
+      margin-right: 5px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding: 5px;
+  }
+  .header__item:hover{
+    background-color: rgba(247, 243, 243, 0.5);
+    border-radius: 10px;
   }
   .header__link{
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-top: 20px;
+      margin-bottom: 20px;
       text-decoration: none;
       color: white;
   }
+  .header__link:hover{
+    color: white;
+    border-radius: 50px;
+  }
   .switch__lang{
       margin-left: 40px;
+  }
+  .intro{
+      height: 100vh;
+      background: url(../img/aion-bg.jpg) no-repeat center;
+      background-size: cover;
+      padding-top: 250px;
+  }
+  .intro__header{
+    font-family: 'merriweather';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 1.2;
+    color: white;
+    text-shadow: 5px 7px 5px black;
+    margin-left: 100px;
+    margin-bottom: 50px;
+  }
+  .intro__about1{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      background-color: rgba(204, 94, 94, 0.26);
+      margin-bottom: 50px;
+  }
+  .intro__description1{
+    width: 50%;
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 1.5;
+    color: white;
+    text-shadow: 2px 2px 3px black;
+    padding-left: 5px;
+  }
+
+
+
+  .history{
+    height: 100vh;
+    background: url(../img/aion-bg2.jpg) no-repeat center;
+    background-size: cover;
+    padding-top: 170px;
   }
