--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
 
   /* Main part of styles */
   .wrapper{
-      max-width: 1440px;
+      max-width: 1400px;
       margin: 0 auto;
   }
   /* Header styles */
@@ -150,7 +150,8 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
+      width: 100%;
       background-color: rgba(204, 94, 94, 0.26);
       margin-bottom: 50px;
   }
@@ -165,7 +166,12 @@
     text-shadow: 2px 2px 3px black;
     padding-left: 5px;
   }
+  .intro__pictures1{
+    display: flex;
+    width: 50%;
+  }
   .pic1{
+    width: 100%;
     border-radius: 3%;
   }
 /* History styles */
@@ -191,7 +197,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    width: 100%;
     background-color: rgba(145, 94, 204, 0.26);
 }
 .history__description1{
@@ -205,13 +212,20 @@
   text-shadow: 2px 2px 3px black;
   padding-left: 5px;
 }
-  .history__about2{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    background-color: rgba(145, 94, 204, 0.26);
-    margin-bottom: 50px;
+.history__pictures1{
+  display: flex;
+  min-width: 35%;
+  flex-shrink: 0;
+  width: 35%;
+}
+.history__about2{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: rgba(145, 94, 204, 0.26);
+  margin-bottom: 50px;
 }
 .history__description2{
   width: 65%;
